# Programming-Language-C-

./: README.md
10WeatherReport/: WeatherReport.pro  main.cpp  main.qml  qml.qrc  weatherapi.cpp  weatherapi.h
1Worm/: Maze.cpp  Maze.h  Position.cpp  Worm.cpp  Worm.h
21-22Z_1T_Kudla/: CMakeLists.txt  main.cpp  priklad1.cpp  priklad1.h  priklad2.cpp  priklad2.h  tst_priklad1.h  votes.txt
3ChatBot/: CMakeLists.txt  Chatbot.cpp  chat.txt  main.cpp
4Tesla/: BatteryException.h  Game.cpp  Game.h  Map.cpp  Map.h  Position.h  Tesla.cpp  Tesla.h  main.cpp  map.txt
6Shop/: Customer.cpp  Customer.hpp  Item.cpp  Item.hpp  Order.cpp  Order.hpp  OrderStatus.cpp  OrderStatus.hpp  Shop.cpp  Shop.hpp  main.cpp
6Store/: Store.cpp  Store.h  main.cpp
7Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixTest.cpp
8Ship/: Button.qml  main.qml  qml.qrc
9Mines/: GameEnd.qml  MineField.pro  MineField.qml  MineTile.qml  StatusBar.qml  main.cpp  main.qml  minegenerator.cpp  minegenerator.h  qml.qrc
9Mines with files/: Mines.pro  filemanager.cpp  filemanager.h  main.cpp
PCPExam1/: CMakeLists.txt  Lesson.cpp  Lesson.hpp  LessonTest.hpp  YogaStudio.cpp  YogaStudio.hpp  YogaStudioTest.hpp  main.cpp  table.txt
PCPExam2/: main.cpp  priklad1.cpp  priklad1.h  priklad2.cpp  priklad2.h  tst_priklad1.h
PCPExam3/: CMakeLists.txt  Guest.cpp  Guest.hpp  GuestTest.hpp  SkiResort.cpp  SkiResort.hpp  SkiResortTest.hpp  main.cpp  ticket.txt
PCPExam3/__MACOSX/: ._CMakeLists.txt  ._Guest.cpp  ._Guest.hpp  ._GuestTest.hpp  ._SkiResort.cpp  ._SkiResort.hpp  ._SkiResortTest.hpp  ._TestSuite  ._cmake-build-debug  ._main.cpp
PCPExam3/__MACOSX/TestSuite/: ._Suite.cpp  ._Suite.h  ._Test.cpp  ._Test.h
PCPExam4/: CMakeLists.txt  measurements.txt  priklad1.cpp  priklad2.cpp  priklad2.h  tst_priklad1.h
Reversi/: GameDesk.cpp  GameDesk.hpp  GameEngine.cpp  GameEngine.hpp  Position.cpp  Position.hpp  Size.cpp  Size.hpp  main.cpp
(+106 files in other folders)
